fix scrollbars

--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,6 @@
-html, body {
-    width: 100%;
-    height: 100%;
+body {
+    font-family: Courier, monospace;
 }
-
 .demo {
     padding: 0;
     margin: 0;
